# generic-tls-library

./: .gitignore  CMakeLists.txt  README.md  ca.pem  client.key  client.pem
docs/: api_guide.md
examples/: radius_demo.cpp
include/gtls/: certificate_verifier.h  config_parser.h  config_serializer.h  connection_pool.h  library.h  logger.h  protocol_adapter.h  rekey_manager.h  selfie_cache.h  tls_config.h  tls_connection.h  tls_context.h  tls_error.h  tls_io.h
src/: certificate_verifier.cpp  config_parser.cpp  config_serializer.cpp  connection_pool.cpp  library.cpp  logger.cpp  protocol_adapter.cpp  rekey_manager.cpp  selfie_cache.cpp  tls_config.cpp  tls_connection.cpp  tls_context.cpp  tls_io.cpp
tests/: certificate_verifier_test.cpp  connection_pool_test.cpp  integration_test.cpp  logger_test.cpp  main_test.cpp  protocol_adapter_test.cpp  rekey_manager_test.cpp  tls_config_test.cpp  tls_connection_test.cpp  tls_context_test.cpp  tls_io_test.cpp
